# msys2-runtime

./: config.guess  config.rpath  configure  configure.ac  libtool.m4  ltmain.sh  ltoptions.m4
.github/workflows/: build.yaml  cygwin.yml  sync-with-cygwin.yml
config/: dfp.m4  elf.m4  lthostflags.m4  mmap.m4  picflag.m4  tcl.m4
include/: ansidecl.h
include/aout/: KongeLog
newlib/: configure  configure.host
newlib/iconvdata/: configure
newlib/libc/: configure
newlib/libc/machine/: configure
newlib/libc/machine/i386/: configure
newlib/libc/stdlib/: mbtowc_r.c  wctomb_r.c
newlib/libc/sys/: configure
newlib/libc/sys/linux/: configure
newlib/libc/sys/linux/linuxthreads/: configure
newlib/libc/sys/linux/linuxthreads/machine/: configure
newlib/libc/sys/linux/linuxthreads/machine/i386/: configure
newlib/libc/sys/linux/machine/: configure
newlib/libc/sys/linux/machine/i386/: configure
newlib/libm/: configure
newlib/libm/machine/: configure
newlib/libm/machine/i386/: configure
winsup/: Makefile.am  Makefile.in  configure  configure.ac
winsup/cygserver/: Makefile.am  Makefile.in  bsd_mutex.cc  configure  configure.ac  cygserver-config  transport_pipes.h
winsup/cygwin/: Makefile.am  Makefile.in  autoload.cc  common.din  configure  configure.ac  crt0.c  cygheap.cc  cyglsa.h  cygserver_setpwd.h  cygthread.cc  cygwin.din  cygwin.sc.in  dcrt0.cc  dlfcn.cc  dll_init.cc  dtable.cc  environ.cc  environ.h  exceptions.cc  exec.cc  external.cc  fhandler.h  fhandler_console.cc  fhandler_disk_file.cc  fhandler_pipe.cc  fhandler_serial.cc  fhandler_tty.cc  flock.cc  fork.cc  globals.cc  hookapi.cc  i686.din  miscfuncs.cc  miscfuncs.h  mkvers.sh  mount.cc  mount.h  msys2_path_conv.cc  msys2_path_conv.h  (+19 more)
winsup/cygwin/fhandler/: console.cc  disk_file.cc  pipe.cc  proc.cc  pty.cc
winsup/cygwin/include/cygwin/: exit_process.h  version.h
winsup/cygwin/include/sys/: termios.h
winsup/cygwin/lib/: _cygwin_crt0_common.cc  crt0.h  cygwin_attach_dll.c  cygwin_crt0.c
winsup/cygwin/libc/: bsdlib.cc
winsup/cygwin/local_includes/: environ.h  miscfuncs.h  mount.h  ntdll.h  path.h  winf.h  winlean.h
winsup/cygwin/mm/: cygheap.cc  mmap.cc
winsup/cygwin/scripts/: mkvers.sh  speclib
winsup/cygwin/sec/: auth.cc
winsup/doc/: Makefile.am  cygwinenv.xml  faq-api.xml
winsup/lsaauth/: cyglsa.c
winsup/testsuite/: Makefile.in  cygrun.c
winsup/testsuite/config/: default.exp
winsup/testsuite/winsup.api/: cygload.cc  cygload.exp  cygload.h  winsup.exp
winsup/utils/: Makefile.am  Makefile.in  cygcheck.cc  dumper.cc  getprocaddr.c  kill.cc  ldd.cc  loadlib.h  parse_pe.cc  path.cc  ssp.c  strace.cc
winsup/utils/mingw/: Makefile.am  cygcheck.cc  getprocaddr.c  strace.cc
